# jacobian-autodiff

./: .clang-format  .gitignore  CMakeLists.txt  GNUmakefile  README.md  README.qmd
src/: CMakeLists.txt  callable_traits.hh  dual.hh  dual_t.cc  function_template_demo.cc  j.hh  j_t.cc  jacobian.hh  jacobian_t.cc  meta_t.cc
