add_executable(dual_t dual_t.cc)
target_link_libraries(dual_t PRIVATE Catch2::Catch2WithMain)
add_test(dual_t dual_t)

add_executable(jacobian_t jacobian_t.cc)
target_link_libraries(jacobian_t PRIVATE Catch2::Catch2WithMain)
add_test(jacobian_t jacobian_t)

add_executable(meta_t meta_t.cc)
target_link_libraries(meta_t PRIVATE Catch2::Catch2WithMain)
add_test(meta_t meta_t)

add_executable(j_t j_t.cc)
target_link_libraries(j_t PRIVATE Catch2::Catch2WithMain)
add_test(j_t j_t)

if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
  message("We are running on a Darwin system")
  message("CMAKE_CXX_COMPILER_ID is: ${CMAKE_CXX_COMPILER_ID}")
  if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    message("We are using a GNU compiler")
    foreach(exe_name IN ITEMS "dual_t" "jacobian_t" "meta_t" "j_t")
      set_target_properties(${exe_name} PROPERTIES LINK_OPTIONS LINKER:-ld_classic)
    endforeach()
  endif()
endif()
